[gd_scene load_steps=5 format=3 uid="uid://by7o0iymt8xvt"]

[ext_resource type="Script" uid="uid://dfhe6yorlt4jm" path="res://menus/main_menu.gd" id="1_4dxmd"]
[ext_resource type="Texture2D" uid="uid://dhc406tshlctc" path="res://assets/pattern_46.png" id="2_0husn"]
[ext_resource type="PackedScene" uid="uid://cans884jf1fnx" path="res://menus/star_map_menu.tscn" id="3_abbjk"]
[ext_resource type="PackedScene" uid="uid://cueb0uhe4gqhl" path="res://menus/destination_preview.tscn" id="4_4vlrk"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_4dxmd")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.141176, 0, 0.2, 0.505882)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/margin_left = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="OptionsButton" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Options"

[node name="QuitButton" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Exit"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Logo" type="MarginContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 2
theme_override_constants/margin_top = 100

[node name="LogoTextureRect" type="TextureRect" parent="VBoxContainer/Logo"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_0husn")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_constants/margin_bottom = 50

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="ConfirmButton" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 32
disabled = true
text = "Confirm Destination"

[node name="StartButton" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Done"

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(1800, 800)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -750.0
offset_right = 750.0
grow_horizontal = 2
grow_vertical = 2

[node name="StarMapMenu" parent="MarginContainer" instance=ExtResource("3_abbjk")]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="DestinationDisplay" parent="MarginContainer" instance=ExtResource("4_4vlrk")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
